logs/core/luit-1.1.1-final-install-030220181912.out
###############################
# Install luit-1.1.1.tar.bz2 #
###############################
Making install in man
make[1]: Entering directory '/lfskernel/sources/boot/X11/app/luit-1.1.1/man'
make[2]: Entering directory '/lfskernel/sources/boot/X11/app/luit-1.1.1/man'
make[2]: Nothing to be done for 'install-exec-am'.
test -z "/usr/share/man/man1" || /bin/mkdir -p "/usr/share/man/man1"
 /usr/bin/install -c -m 644 luit.1 '/usr/share/man/man1'
make[2]: Leaving directory '/lfskernel/sources/boot/X11/app/luit-1.1.1/man'
make[1]: Leaving directory '/lfskernel/sources/boot/X11/app/luit-1.1.1/man'
make[1]: Entering directory '/lfskernel/sources/boot/X11/app/luit-1.1.1'
  CC     sys.o
sys.c: In function 'allocatePty':
sys.c:339:11: error: implicit declaration of function 'posix_openpt' [-Werror=implicit-function-declaration]
     pty = posix_openpt(O_RDWR);
           ^~~~~~~~~~~~
sys.c:339:11: warning: nested extern declaration of 'posix_openpt' [-Wnested-externs]
cc1: some warnings being treated as errors
make[1]: *** [Makefile:412: sys.o] Error 1
make[1]: Leaving directory '/lfskernel/sources/boot/X11/app/luit-1.1.1'
make: *** [Makefile:434: install-recursive] Error 1
